[package]
name = "adventofcode2020"
version = "0.1.0"
authors = ["Kan-Ru Chen <kanru@kanru.info>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.4"
anyhow = "1.0.35"
color-backtrace = "0.5.0"
regex = "1.4.2"
